fixed overflow

--- a/mainPageStyle.css
+++ b/mainPageStyle.css
@@ -3,7 +3,6 @@ body {
     padding-bottom: 50vw;
     position: absolute;
     width: 100vw;
-    overflow: hidden;
 }
 
 h1 {
